--- a/src/app/pages/bill/bill.page.html
+++ b/src/app/pages/bill/bill.page.html
@@ -1,13 +1,54 @@
 <ion-header [translucent]="true">
   <ion-toolbar>
-    <ion-title>bill</ion-title>
+    <ion-title>My Cart</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">bill</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <ion-grid>
+    <ion-row>
+      <ion-col size="12" class="cart-title">
+        <h2>My Cart</h2>
+      </ion-col>
+    </ion-row>
+
+    <ion-list>
+      <ion-item *ngFor="let item of cartItems">
+        <ion-thumbnail slot="start">
+          <img [src]="item.image" />
+        </ion-thumbnail>
+        <ion-label>
+          <h3>{{ item.name }}</h3>
+          <p>Price: {{ item.price | currency }}</p>
+          <p>Total: {{ item.totalPrice | currency }}</p>
+        </ion-label>
+        <ion-buttons slot="end">
+          <ion-button color="light" (click)="decrement(item)">
+            <ion-icon name="remove-outline"></ion-icon>
+          </ion-button>
+          <ion-label>{{ item.quantity }}</ion-label>
+          <ion-button color="light" (click)="increment(item)">
+            <ion-icon name="add-outline"></ion-icon>
+          </ion-button>
+        </ion-buttons>
+        <ion-button color="danger" fill="clear" (click)="removeItem(item)">
+          <ion-icon name="close-outline"></ion-icon>
+        </ion-button>
+      </ion-item>
+    </ion-list>
+
+    <ion-row class="subtotal">
+      <ion-col size="6">
+        <ion-button expand="full" fill="outline" routerLink="/shopping">
+          Back to Shopping
+        </ion-button>
+      </ion-col>
+      <ion-col size="6" class="text-end">
+        <h2>Subtotal: {{ getTotal() | currency }}</h2>
+        <ion-button expand="full" color="primary">
+          Checkout
+        </ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
